Update api routes and app components
